--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,43 @@
-# Node modules
+# Node.js
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
 # Logs
 logs/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Debugging
-.vscode/
-*.swp
-*.swo
-
-# Environment variables
-.env
 
 # Build output
 dist/
 build/
 
-# TypeScript cache
+# TypeScript
 *.tsbuildinfo
 
-# IDE and editor-specific files
-.DS_Store
-.idea/
-*.iml
+# Environment variables
+.env
+*.env.local
+*.env.development.local
+*.env.test.local
+*.env.production.local
+
+# Prisma
+prisma/dev.db
+prisma/dev.db-journal
+prisma/migrations/
 
 # OS-specific files
+.DS_Store
 Thumbs.db
 
-package-lock.json
+# IDE and editor-specific files
+.idea/
+.vscode/
+*.swp
+*.swo
+*.iml
+
+# Coverage output
+coverage/
