--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,9 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src",
-    "paths": {
-      "@root/*": ["./*"],
-      "@routes/*": ["src/routes/*"],
-      "@configs/*": ["src/configs/*"],
-      "@controllers/*": ["src/controllers/*"],
-      "@errors/*": ["src/errors/*"],
-      "@middlewares/*": ["src/middlewares/*"],
-      "@utils/*": ["src/utils/*"],
-      "@validations/*": ["src/validations/*"]
-    },
+    "baseUrl": ".",
     "target": "ES2022",
     "module": "CommonJS",
-    "rootDir": "./src",
+    "rootDirs": ["src", "prisma"],
     "outDir": "./dist",
     "strict": true,
     "strictNullChecks": true,
@@ -33,7 +23,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": ["src/**/*", "server.ts"],
+  "include": ["src/**/*", "prisma/**/*", "server.ts"],
   "exclude": ["node_modules", "dist"],
   "ts-node": {
     "transpileOnly": true
