--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 APP_NAME = "Express typescript harry potter api wiki"
 APP_PORT = 8000
 DATABASE_URL="file:./dev.db"
+
+RATE_LIMIT_WINDOW_MS = 1 * 60 * 1000
+RATE_LIMIT_MAX_REQUESTS=3
