--- a/package.json
+++ b/package.json
@@ -31,10 +31,9 @@
     "@types/sqlite3": "^3.1.11",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "compression": "^1.7.5",
     "connect-timeout": "^1.9.0",
-    "cors": "^2.8.5",
     "eslint": "^9.15.0",
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.4.1",
