--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/compression": "^1.7.5",
     "@types/connect-timeout": "^0.0.39",
     "@types/express": "^5.0.0",
+    "@types/hpp": "^0.2.6",
     "@types/node": "^22.10.1",
     "eslint-config-prettier": "^9.1.0",
     "express": "^4.21.1",
