--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME = "Express typescript harry potter api wiki"
 NODE_ENV = "development"
 APP_PORT = 8000
-DATABASE_URL = "file:./dev.db"
+DATABASE_URL = "file:../dev.db"
 
 RATE_LIMIT_WINDOW_MS = 15 * 60 * 1000
 RATE_LIMIT_MAX_REQUESTS = 10
