--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2022",
     "module": "CommonJS",
-    "rootDirs": ["src", "prisma"],
+    "rootDirs": ["src"],
     "outDir": "./dist",
     "strict": true,
     "skipLibCheck": true,
